--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
 
   <properties>
     <maven.compiler.release>8</maven.compiler.release>
+    <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
   </properties>
+
 
   <dependencies>
     <dependency>
